@@ -9,12 +9,16 @@ import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.EditBox;
 import net.minecraft.client.gui.components.Renderable;
 import net.minecraft.client.gui.components.Tooltip;
+import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.narration.NarratableEntry;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.gui.screens.worldselection.CreateWorldScreen;
 import net.minecraft.client.gui.screens.worldselection.WorldCreationContext;
 import net.minecraft.client.gui.screens.worldselection.WorldCreationUiState;
 import net.minecraft.core.LayeredRegistryAccess;
+import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.server.RegistryLayer;
 import net.minecraft.world.Difficulty;
 import net.minecraft.world.flag.FeatureFlags;
@@ -26,6 +30,7 @@ import org.spongepowered.asm.mixin.Shadow;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
+import wily.legacy.Legacy4J;
 import wily.legacy.Legacy4JClient;
 import wily.legacy.client.CommonColor;
 import wily.legacy.client.ControlType;
@@ -50,6 +55,8 @@ public abstract class CreateWorldScreenMixin extends Screen implements ControlTo
 
     @Shadow public abstract void popScreen();
 
+    @Shadow protected abstract <T extends GuiEventListener & Renderable & NarratableEntry> T addRenderableWidget(T guiEventListener);
+
     protected boolean trustPlayers;
     protected Panel panel;
     protected PublishScreen publishScreen;
@@ -65,7 +72,7 @@ public abstract class CreateWorldScreenMixin extends Screen implements ControlTo
     @Inject(method = "<init>",at = @At("RETURN"))
     public void initReturn(Minecraft minecraft, Screen screen, WorldCreationContext worldCreationContext, Optional optional, OptionalLong optionalLong, CallbackInfo ci){
         uiState.setDifficulty(((LegacyOptions)minecraft.options).createWorldDifficulty().get());
-        panel = new Panel(p-> (width - (p.width + (ScreenUtil.hasTooltipBoxes() ? 160 : 0))) / 2, p-> (height - p.height) / 2,245,228);
+        panel = new Panel(p-> p.centeredLeftPos(this), p-> (height - p.height) / 2 + 30,225,219);
         resourcePackSelector = PackSelector.resources(panel.x + 13, panel.y + 106, 220,45, !ScreenUtil.hasTooltipBoxes());
         publishScreen = new PublishScreen(this, uiState.getGameMode().gameType);
     }
@@ -81,29 +88,35 @@ public abstract class CreateWorldScreenMixin extends Screen implements ControlTo
         ci.cancel();
         panel.init();
         addRenderableOnly(panel);
-        EditBox nameEdit = new EditBox(font, panel.x + 13, panel.y + 25,220, 20, Component.translatable("selectWorld.enterName"));
+        TickBox hostPrivilleges = new TickBox(panel.x + 13, panel.y + 11,uiState.isAllowCheats(),b->Component.translatable("selectWorld.allowCommands"),b->null,b->uiState.setAllowCheats(b.selected));
+        addRenderableWidget(new TickBox(panel.x+ 13, panel.y+29,publishScreen.publish, b-> PublishScreen.PUBLISH, b->null, button -> {
+            if (button.selected) minecraft.setScreen(publishScreen);
+            button.selected = publishScreen.publish = false;
+        }));
+        uiState.addListener(s-> hostPrivilleges.active = !s.isDebug() && !s.isHardcore());
+        addRenderableWidget(hostPrivilleges);
+        EditBox nameEdit = new EditBox(font, panel.x + 13, panel.y + 56,200, 20, Component.translatable("selectWorld.enterName"));
         nameEdit.setValue(uiState.getName());
         nameEdit.setResponder(uiState::setName);
-        uiState.addListener(worldCreationUiState -> nameEdit.setTooltip(Tooltip.create(Component.translatable("selectWorld.targetFolder", Component.literal(worldCreationUiState.getTargetFolder()).withStyle(ChatFormatting.ITALIC)))));
         setInitialFocus(nameEdit);
         addRenderableWidget(nameEdit);
-        LegacySliderButton<WorldCreationUiState.SelectedGameMode> gameModeButton = addRenderableWidget(new LegacySliderButton<>(panel.x + 13, panel.y + 51, 220,16, b -> b.getDefaultMessage(GAME_MODEL_LABEL,b.getObjectValue().displayName),b->Tooltip.create(uiState.getGameMode().getInfo()),uiState.getGameMode(),()-> List.of(WorldCreationUiState.SelectedGameMode.SURVIVAL, WorldCreationUiState.SelectedGameMode.HARDCORE, WorldCreationUiState.SelectedGameMode.CREATIVE), b->uiState.setGameMode(b.getObjectValue())));
-        uiState.addListener(worldCreationUiState -> gameModeButton.active = !worldCreationUiState.isDebug());
-        LegacySliderButton<Difficulty> difficultyButton = addRenderableWidget(new LegacySliderButton<>(panel.x + 13, panel.y + 77, 220,16, b -> b.getDefaultMessage(Component.translatable("options.difficulty"),b.getObjectValue().getDisplayName()),b->Tooltip.create(uiState.getDifficulty().getInfo()),uiState.getDifficulty(),()-> Arrays.asList(Difficulty.values()), b->uiState.setDifficulty(b.getObjectValue())));
+        EditBox editBox = new EditBox(font, panel.x + 13, panel.y + 96, 200, 20, Component.translatable("selectWorld.enterSeed"));
+        editBox.setValue(uiState.getSeed());
+        editBox.setResponder(string -> uiState.setSeed(editBox.getValue()));
+        addRenderableWidget(editBox);
+//        LegacySliderButton<WorldCreationUiState.SelectedGameMode> gameModeButton = addRenderableWidget(new LegacySliderButton<>(panel.x + 13, panel.y + 118, 195,16, b -> b.getDefaultMessage(GAME_MODEL_LABEL,b.getObjectValue().displayName),b->Tooltip.create(uiState.getGameMode().getInfo()),uiState.getGameMode(),()-> List.of(WorldCreationUiState.SelectedGameMode.SURVIVAL, WorldCreationUiState.SelectedGameMode.HARDCORE, WorldCreationUiState.SelectedGameMode.CREATIVE), b->uiState.setGameMode(b.getObjectValue())));
+//        uiState.addListener(worldCreationUiState -> gameModeButton.active = !worldCreationUiState.isDebug());
+        LegacySliderButton<Difficulty> difficultyButton = addRenderableWidget(new LegacySliderButton<>(panel.x + 13, panel.y + 136, 200,16, b -> b.getDefaultMessage(Component.translatable("options.difficulty"),b.getObjectValue().getDisplayName()),b->null,uiState.getDifficulty(),()-> Arrays.asList(Difficulty.values()), b->uiState.setDifficulty(b.getObjectValue())));
         uiState.addListener(worldCreationUiState -> {
             difficultyButton.setObjectValue(uiState.getDifficulty());
             difficultyButton.active = !uiState.isHardcore();
         });
 
-        addRenderableWidget(Button.builder(Component.translatable( "createWorld.tab.more.title"), button -> minecraft.setScreen(new WorldMoreOptionsScreen(self(), b-> trustPlayers = b))).bounds(panel.x + 13, panel.y + 172,220,20).build());
-        addRenderableWidget(Button.builder(Component.translatable("selectWorld.create"), button -> this.onCreate()).bounds(panel.x + 13, panel.y + 197,220,20).build());
-        addRenderableWidget(new TickBox(panel.x+ 14, panel.y+155,220,publishScreen.publish, b-> PublishScreen.PUBLISH, b->null, button -> {
-            if (button.selected) minecraft.setScreen(publishScreen);
-            button.selected = publishScreen.publish = false;
-        }));
-        resourcePackSelector.setX(panel.x + 13);
-        resourcePackSelector.setY(panel.y + 106);
-        addRenderableWidget(resourcePackSelector);
+        addRenderableWidget(new LegacySliderButton<>(panel.x + 13, panel.y + 161, 200,16, s -> s.getDefaultMessage(Component.translatable("selectWorld.mapType"), uiState.getWorldType().describePreset()), b -> uiState.getWorldType().isAmplified() ? Tooltip.create(Component.translatable("generator.minecraft.amplified.info")) : null, uiState.getWorldType(), () -> hasAltDown() ? uiState.getAltPresetList() : uiState.getNormalPresetList(), b -> uiState.setWorldType(b.getObjectValue())));
+
+        addRenderableWidget(Button.builder(Component.translatable("selectWorld.create"), button -> this.onCreate()).bounds(panel.x + 13, panel.y + 186,200,20).build());
+
+
         this.uiState.onChanged();
     }
 
@@ -135,18 +148,11 @@ public abstract class CreateWorldScreenMixin extends Screen implements ControlTo
     }
     
     private static void confirmWorldCreation(Minecraft minecraft, CreateWorldScreen createWorldScreen, Lifecycle lifecycle, Runnable runnable, boolean bl2) {
-        if (bl2 || lifecycle == Lifecycle.stable()) {
-            runnable.run();
-        } else if (lifecycle == Lifecycle.experimental()) {
-            minecraft.setScreen(new ConfirmationScreen(createWorldScreen, Component.translatable("selectWorld.warning.experimental.title"), Component.translatable("selectWorld.warning.experimental.question"),b->runnable.run()));
-        } else {
-            minecraft.setScreen(new ConfirmationScreen(createWorldScreen, Component.translatable("selectWorld.warning.deprecated.title"), Component.translatable("selectWorld.warning.deprecated.question"),b->runnable.run()));
-        }
+        runnable.run();
     }
     @Override
     public void renderBackground(GuiGraphics guiGraphics, int i, int j, float f) {
-        ScreenUtil.renderDefaultBackground(guiGraphics,false);
-        resourcePackSelector.renderTooltipBox(guiGraphics,panel);
+        ScreenUtil.renderDefaultBackground(guiGraphics,true);
     }
     @Override
     public boolean mouseScrolled(double d, double e, double f, double g) {
@@ -157,7 +163,9 @@ public abstract class CreateWorldScreenMixin extends Screen implements ControlTo
         this.renderBackground(guiGraphics, i, j, f);
         for (Renderable renderable : this.renderables)
             renderable.render(guiGraphics, i, j, f);
-        guiGraphics.drawString(font,NAME_LABEL, panel.x + 14, panel.y + 15, CommonColor.INVENTORY_GRAY_TEXT.get(),false);
+        guiGraphics.drawString(font,NAME_LABEL, panel.x + 13, panel.y + 46, CommonColor.INVENTORY_GRAY_TEXT.get(),false);
+        guiGraphics.drawString(font, "Seed for the World Generator", panel.x + 13, panel.y + 86, CommonColor.INVENTORY_GRAY_TEXT.get(),false);
+        guiGraphics.drawString(font, "Leave blank for a random seed", panel.x + 13, panel.y + 119, CommonColor.INVENTORY_GRAY_TEXT.get(),false);
     }
 
     @Override
